@@ -18,6 +18,7 @@ Version 1.0.7.20
      * Haskell (Dagit)
      * ABAP (Andres Picazo)
      * Motorola 68k Assembler (for MC68HC908GP32 Microcontroller) (BenBE)
+     * Dot (Adrien Friggeri)
   -  Fixed java documentation search for keywords to actually go to the
      documentation (spaze)
   -  Applied fix for bug 1688864 (bad regexes) (Tim Starling)
